--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,14 @@
   <link rel="stylesheet" href="./style/style.scss">
 </head>
 <body>
-  <div class="score js-score">
-    <p>X: <span class="js-score-x"></span></p>
-    <p>O: <span class="js-score-o"></span></p>
+  <div class="score">
+    <p>X : <span class="js-score js-score-x"></span></p>
+    <p>O : <span class="js-score js-score-o"></span></p>
   </div>
   <div class="game js-game"></div>
   <div class="button-wrapper">
-    <button class="js-reset">Reset</button>
-    <button class="js-reset-score">Reset score</button>
+    <button class="button js-reset">Reset</button>
+    <button class="button js-reset-score">Reset score</button>
   </div>
 <script src="./typescript/main.ts"></script>
 </body>
