Start recreating in Solidjs

--- a/old/index.html
+++ b/old/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="./style/style.scss">
+  <link rel="stylesheet" href="bundle.css">
 </head>
 <body>
   <div class="score">
@@ -16,6 +16,6 @@
     <button class="button js-reset">Reset</button>
     <button class="button js-reset-score">Reset score</button>
   </div>
-<script src="./typescript/main.ts"></script>
+<script src="bundle.js"></script>
 </body>
 </html>
